--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -24,7 +24,7 @@
                     <a th:href="@{/article/create}" class="ml-2 my-3 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">게시글 작성</a>
                 </div>
                 <ul class="container">
-                    <li class="bg-neutral text-white p-3 flex justify-between border-b h-11">
+                    <li class="bg-neutral text-white p-3 flex justify-between border-b h-11 rounded-md">
                         <div class="text-sm flex-grow ">게시글 제목</div>
                         <div class="text-sm w-16 text-center">글쓴이</div>
                         <div class="text-sm  w-16 text-center">추천수</div>
