--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -7,7 +7,7 @@
 
     <div class="container mx-auto py-8 w-1/2">
         <a href="/article/list" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 게시글</a>
-        <h1 class="text-2xl font-bold flex-grow pl-3 mt-2" th:text="${article.title}"></h1>
+        <h1 class="text-2xl font-bold flex-grow pl-3 mt-2 truncate overflow-ellipsis" th:text="${article.title}"></h1>
         <div class="flex justify-between mt-2 mb-1">
             <p class="text-xs mt-2 mr-2 w-80 ml-3" th:text="${article.member.nickname}"></p>
             <p class="flex-grow text-xs mt-2" th:text="${#temporals.format(article.createdDate, 'yyyy-MM-dd HH:mm')}"></p>
@@ -56,7 +56,7 @@
             <div class="flex">
                 <div th:if="${@rq.login}" th:text="${@rq.member.nickname}" class="text-xs w-32 text-center truncate overflow-ellipsis" ></div>
             </div>
-            <textarea name="content" th:field="*{content}" class="form-textarea border border-neutral rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
+            <textarea name="content" th:field="*{content}" class="form-textarea border resize-none border-neutral rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
             <button type="submit" class="register bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black">등록</button>
         </form>
         <!--댓글 등록 완료-->
@@ -90,7 +90,7 @@
                     <!--댓글 수정-->
                     <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                        <textarea th:id="|textarea-${comment.id}|" name="content" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="댓글 내용"></textarea>
+                        <textarea th:id="|textarea-${comment.id}|" name="content" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="댓글을 작성하세요"></textarea>
                         <div class="flex">
                             <input th:id="|button-${comment.id}|" type="submit" value="수정완료" class="hidden modify-save-button bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="saveComment()" th:attr="data-id=${comment.id}">
                         </div>
@@ -135,7 +135,7 @@
                                 <div th:id="|update-subComment-${subComment.id}|" class="hidden">
                                     <form th:action="@{|/subComment/update/${subComment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                        <textarea name="content" th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="form-textarea2 modify-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답글 내용"></textarea>
+                                        <textarea name="content" th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="form-textarea2 modify-textarea w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답글을 작성하세요"></textarea>
                                         <div class="flex">
                                             <button type="submit" class="register2 modify-save-button bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="saveSubComment()" th:attr="data-id=${subComment.id}">수정완료</button>
                                         </div>
@@ -156,7 +156,7 @@
                             </div>
                             <form th:action="@{|/subComment/create/${comment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mt-1 mb-4 justify-between items-start flex-grow" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                <textarea name="content" th:field="*{content}" class="form-textarea2 w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답변에 댓글을 작성하세요"></textarea>
+                                <textarea name="content" th:field="*{content}" class="form-textarea2 w-full p-3 resize-none overflow-y-auto border border-neutral rounded-md mb-2 text-sm" placeholder="답글을 작성하세요"></textarea>
                                 <div class="flex">
                                     <button type="submit" class="register2 bg-neutral text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-black ml-auto" onclick="createSubComment()" th:attr="data-id=${comment.id}">등록</button>
                                 </div>
