--- a/src/main/resources/templates/resume/question-result.html
+++ b/src/main/resources/templates/resume/question-result.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.6/dist/full.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css"/>
 
-    <title>면접 예상 질</title>
+    <title>면접 예상 질문</title>
 </head>
 <body>
 <main layout:fragment="main" class="flex justify-center items-center h-auto mt-16">
