Feat: 이메일 인증기능추가

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -47,7 +47,7 @@
 
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
-            <h2 class="text-xl font-semibold mb-4">로그인</h2>
+            <h2 class="text-xl font-semibold mb-4">🔐 로그인</h2>
             <form th:action method="post" th:object="${loginRequestDto}" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
                 <div class="form-control">
                     <label class="block mb-2">아이디</label>
