--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -2,14 +2,14 @@
 <head>
     <title>회원가입</title>
 
-    <script src="/resource/valid/duplicationCheck.js"></script>
-    <script src="/resource/valid/submitForm.js"></script>
+    <script src="/resource/valid/valid.js"></script>
+
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg">
-            <h2 class="text-2xl font-semibold mb-4">회원가입</h2>
+            <h2 class="text-2xl font-semibold mb-4">📬 회원가입</h2>
 
             <form th:action th:object="${joinRequestDto}" method="post" class="flex flex-col gap-6">
                 <div>
@@ -18,10 +18,13 @@
                         <input type="text" name="username" th:field="*{username}"
                                class="border-b border-neutral px-2 py-2 w-full focus:outline-none form-control"
                                placeholder="아이디를 입력하세요">
-                        <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
+                        <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                                onclick="checkDuplication(event);">중복확인
+                        </button>
                     </div>
                     <div class="mt-2">
-                        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-red-500"></span>
+                        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+                              class="text-red-500"></span>
                         <span id="usernameMessage" style="display: none;">중복여부</span>
                     </div>
                 </div>
@@ -33,7 +36,8 @@
                                placeholder="비밀번호를 입력하세요">
                     </div>
                     <div class="mt-2">
-                        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-red-500"></span>
+                        <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+                              class="text-red-500"></span>
                     </div>
                 </div>
                 <div>
@@ -44,7 +48,8 @@
                                placeholder="비밀번호를 다시 한 번 입력하세요">
                     </div>
                     <div class="mt-2">
-                        <span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-red-500"></span>
+                        <span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"
+                              class="text-red-500"></span>
                     </div>
 
                 </div>
@@ -55,11 +60,14 @@
                             <input type="text" name="nickname" th:field="*{nickname}"
                                    class="border-b border-neutral px-2 py-2 w-full focus:outline-none form-control"
                                    placeholder="닉네임을 입력하세요">
-                            <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
+                            <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                                    onclick="checkDuplication(event);">중복확인
+                            </button>
                         </div>
                     </div>
                     <div class="mt-2">
-                        <span th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="text-red-500"></span>
+                        <span th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}"
+                              class="text-red-500"></span>
                         <span id="nicknameMessage" style="display: none;">중복여부</span>
                     </div>
 
@@ -71,15 +79,37 @@
                             <input type="email" name="email" th:field="*{email}"
                                    class="border-b border-neutral px-2 py-2 w-full focus:outline-none form-control"
                                    placeholder="이메일을 입력하세요">
-                            <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
+                            <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                                    onclick="sendEmail(event);">이메일 인증
+                            </button>
                         </div>
                     </div>
-                    <div class="mt-2">
+                    <div>
                         <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-500"></span>
-                        <span id="emailMessage" style="display: none;">중복여부</span>
+                        <span id="emailMessage" style="display: none;">전송여부</span>
                     </div>
                 </div>
-                <button type="submit" onclick="submitForm()" class="mt-8 bg-neutral text-white px-4 py-2 rounded-lg text-sm">가입하기</button>
+
+                <div id="verificationCodeBlock" style="display: none;" class="mt-2">
+                    <div>
+                        <label class="block mb-2 mt-4 text-sm">인증코드</label>
+                        <div class="flex items-center">
+                            <input type="verificationCode" id="verificationCode" name="verificationCode"
+                                   class="border-b border-neutral px-2 py-2 w-full focus:outline-none form-control"
+                                   placeholder="인증코드를 입력하세요">
+                            <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                                    onclick="verifyCode(event);">인증코드 확인
+                            </button>
+                        </div>
+                    </div>
+                    <div>
+                        <span id="verificationCodeMessage" style="display: none;">코드일치여부</span>
+                    </div>
+                </div>
+
+                <button type="submit" onclick="submitForm()"
+                        class="mt-8 bg-neutral text-white px-4 py-2 rounded-lg text-sm">가입하기
+                </button>
             </form>
         </div>
     </div>
