--- a/src/main/resources/templates/jobstatistic/list.html
+++ b/src/main/resources/templates/jobstatistic/list.html
@@ -3,7 +3,12 @@
 
 <body>
 <main layout:fragment="main" class="flex items-center justify-center flex-col">
-
+<!--  <div class="flex justify-end w-11/12">-->
+<!--    <div></div>-->
+<!--    <div class="mr-20">-->
+<!--      <div th:replace="~{jobstatistic/fragment/search :: search (${search})}"></div>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="flex justify-around w-9/12 overflow-x-auto">
     <table class="table w-full">
       <thead class="text-slate-200 text-center">
@@ -47,7 +52,7 @@
     <div th:if="${!paging.isEmpty()}"
          class="pagination flex justify-center space-x-2">
 
-      <a th:href="@{|?page=${paging.number - 1}|}"
+      <a th:href="@{/jobstatistic/search/all(page=${paging.number - 1},sector=${param.sector},career=${param.career})}"
          class="btn"
          th:classappend="${!paging.hasPrevious} ? 'sr-only'">
         이전
@@ -61,7 +66,7 @@
             <a th:text="${page + 1}" th:href="@{/jobstatistic/search/all(page=${page},sector=${param.sector},career=${param.career})}"></a>
         </span>
 
-      <a th:href="@{|?page=${paging.number + 1}|}"
+      <a th:href="@{/jobstatistic/search/all(page=${paging.number + 1},sector=${param.sector},career=${param.career})}"
          class="btn"
          th:classappend="${!paging.hasNext} ? 'sr-only'">
         다음
