Refator: 중복 로직, 미사용 코드 삭제

--- a/src/main/resources/templates/jobstatistic/fragment/jobRequestFrom.html
+++ b/src/main/resources/templates/jobstatistic/fragment/jobRequestFrom.html
@@ -12,7 +12,7 @@
             <option value="84">백엔드</option>
             <option value="92">프론트엔드</option>
             <option value="2232">풀스택</option>
-            <option value="0">모두보기</option>
+<!--            <option value="0">모두보기</option>-->
         </select>
     </div>
 
