--- a/src/main/resources/templates/resume/question-request.html
+++ b/src/main/resources/templates/resume/question-request.html
@@ -81,7 +81,7 @@
 
         <div class="mb-6"></div>
 
-        <label for="career" class="mb-6">Career</label>
+        <label for="career" class="mb-6">경력</label>
         <div class="mt-2">
             <select class="select select-bordered w-full max-w-xs" id="career" name="career">
                 <option value="experienced">경력</option>
