--- a/core/src/main/resources/templates/layout/layout.html
+++ b/core/src/main/resources/templates/layout/layout.html
@@ -18,7 +18,7 @@
         <li><a href="/member/login" th:if="${@rq.logout}" class="btn btn-ghost normal-case text-xl">로그인</a></li>
         <li><a href="/member/join" th:if="${@rq.logout}" class="btn btn-ghost normal-case text-xl">회원가입</a></li>
         <li>
-          <a href="/member/me" class="btn btn-ghost normal-case text-xl" th:if="${@rq.login}" th:text="|${@rq.member.nickname}님 환영합니다.|"></a>
+          <span class="btn btn-ghost normal-case text-xl" th:if="${@rq.login}" th:text="|${@rq.member.nickname}님 환영합니다.|"></span>
           <a href="javascript:;" th:if="${@rq.login}" onclick="$(this).next().submit();" class="btn btn-ghost normal-case text-xl">로그아웃</a>
           <form th:if="${@rq.login}" hidden th:action="|/member/logout|" method="POST"></form>
         </li>
