--- a/core/src/main/resources/templates/member/me.html
+++ b/core/src/main/resources/templates/member/me.html
@@ -5,14 +5,17 @@
 <body>
 
 <main layout:fragment="main" class="container my-3 mx-auto">
-    <div class="flex justify-center items-center min-h-screen">
-        <div class="w-96 bg-white p-8 rounded-lg">
-            <h2 class="text-2xl font-semibold mb-4">내 정보</h2>
-            <div class="flex items-center flex-wrap">
-                <li class="mr-6">아이디: <span th:text="${@rq.member.username}">유저아이디</span></li>
-                <li class="mr-6">닉네임: <span th:text="${@rq.member.nickname}">유저닉네임</span></li>
-                <li class="mr-6">이메일: <span th:text="${@rq.member.email}">유저이메일</span></li>
-                <li class="mr-6">회원등급: <span th:text="${@rq.member.isPayed}">회원등급</span></li>
+    <div class="flex justify-center items-center min-h-screen rounded-lg">
+        <div class="w-120 bg-white p-8 border rounded-lg">
+            <div>
+                <h2 class="text-2xl font-semibold mb-4" style="display: flex">내 정보</h2>
+                <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm flex" style="margin-left:auto;">회원정보수정</button>
+            </div>
+            <div class="space-y-2">
+                <p>아이디: <span th:text="${@rq.member.username}">유저아이디</span></p>
+                <p>닉네임: <span th:text="${@rq.member.nickname}">유저닉네임</span></p>
+                <p>이메일: <span th:text="${@rq.member.email}">유저이메일</span></p>
+                <p>회원등급: <span th:text="${@rq.member.isPayed}">회원등급</span></p>
                 <!--                <li th:if="${@rq.member.isPayed}" class="mr-6">회원등급: <span th:text="${@rq.member.isPayed} ? '프리미엄 회원' : '일반 회원'"></span></li>-->
             </div>
 
@@ -22,14 +25,15 @@
                     <label for="newNickname" class="mr-2">새 닉네임:</label>
                     <input type="text" id="newNickname" name="newNickname"
                            class="border border-gray-300 rounded px-2 py-1">
-                    <button type="submit" class="ml-2 bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded">변경
+                    <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                            onclick="checkDuplication(event);">중복확인
                     </button>
                 </form>
             </div>
 
-            <h2 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h2>
+            <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
             <div class="flex items-center">
-                <ul id="myPosts" class="list-disc ml-8">
+                <ul id="myArticles" class="list-disc ml-8">
                     <li>글 1</li>
                     <li>글 2</li>
                     <li>글 3</li>
@@ -37,7 +41,7 @@
                 </ul>
             </div>
 
-            <h2 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h2>
+            <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h3>
             <div class="flex items-center">
                 <ul id="myComments" class="list-disc ml-8">
                     <li>댓글 1</li>
@@ -47,7 +51,7 @@
                 </ul>
             </div>
 
-            <h2 class="text-2xl font-semibold mb-4 mt-4">GPT 답변 내용</h2>
+            <h3 class="text-2xl font-semibold mb-4 mt-4">GPT 답변 내용</h3>
             <div class="flex items-center">
                 <ul id="gpt" class="list-disc ml-8">
                     <li>댓글 1</li>
