--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -45,22 +45,22 @@
             <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
             <div class="space-y-2">
                 <div th:each="article, loop: ${@rq.member.articles}">
-                    <p th:if="${loop.index} < 5" th:text="${article.title}" class="text-xs  w-16 text-center">글 제목</p>
+                    <p th:if="${loop.index} < 5" th:text="${article.title}" class="text-xs w-16 text-center">글 제목</p>
                 </div>
                 <div class="flex justify-content: flex-end">
                     <a href="" class="text-xs w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
                 </div>
             </div>
 
-            <!--            <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h3>-->
-            <!--            <div class="space-y-2">-->
-            <!--                <div th:each="comment : ${@rq.member.comments}" th:limit="5">-->
-            <!--                    <p th:text="${comment.contents}" class="text-xs  w-16 text-center">글 제목</p>-->
-            <!--                </div>-->
-            <!--                <div>-->
-            <!--                    <a href="" class="text-xs  w-16 text-center" style="margin-left: auto;">>전체보기</a>-->
-            <!--                </div>-->
-            <!--            </div>-->
+            <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h3>
+            <div class="space-y-2">
+                <div th:each="comment, loop : ${@rq.member.comments}">
+                    <p th:if="${loop.index} < 5" th:text="${comment.content}" class="text-xs w-16 text-center">댓글내용</p>
+                </div>
+                <div class="flex justify-content: flex-end">
+                    <a href="" class="text-xs  w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
+                </div>
+            </div>
 
             <h3 class="text-2xl font-semibold mb-4 mt-4">GPT 답변 내용</h3>
             <div class="flex items-center">
