--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -40,7 +40,7 @@
         <div class="bg-white p-8 border rounded-lg">
             <div class="flex items-center justify-between">
                 <h2 class="text-2xl font-semibold mb-4" style="display: inline">내 정보</h2>
-                <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm flex"
+                <button th:if="${!@rq.member.isSocialMember}" class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm flex"
                         onclick="openModal()" >회원정보수정</button>
             </div>
             <div class="space-y-2">
