--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -42,6 +42,8 @@
                 <h2 class="text-2xl font-semibold mb-4" style="display: inline">내 정보</h2>
                 <button th:if="${!@rq.member.isSocialMember}" class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm flex"
                         onclick="openModal()" >회원정보수정</button>
+                <a href="/member/edit"  th:if="${@rq.member.isSocialMember}"
+                   class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm flex">회원정보수정</a>
             </div>
             <div class="space-y-2">
                 <p>아이디: <span th:text="${@rq.member.username}">유저아이디</span></p>
