Feat: 회원정보수정기능추가

--- a/api/src/main/resources/templates/member/confirm-password.html
+++ b/api/src/main/resources/templates/member/confirm-password.html
@@ -10,8 +10,7 @@
             <form action="/member/edit/confirm/password" method="post" class="flex flex-col gap-6">
                 <label for="passwordToEdit">비밀번호를 입력하세요.</label>
                 <input type="password" id="passwordToEdit" name="passwordToEdit"
-                       class="border border-gray-300 rounded px-2 py-1 mb-2">
-                <span class="text-red-500" id="passwordToEditMessage" style="display: none;"></span>
+                       class="border border-gray-300 rounded px-2 py-1 mb-2 focus:outline-none">
 
                 <div class="flex justify-end">
                     <button type="submit" class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">확인
