--- a/api/src/main/resources/templates/member/edit.html
+++ b/api/src/main/resources/templates/member/edit.html
@@ -1,20 +1,58 @@
 <html layout:decorate="~{layout/layout.html}">
 <head>
     <title>회원정보수정</title>
+
+    <script>
+        function submitForm() {
+            const nicknameInput = document.getElementById('nickname');
+            const nickname = nicknameInput.value.trim();
+            const nicknameMessage = document.getElementById('nicknameMessage');
+
+            const formData = new FormData();
+            formData.append('nickname', nickname);
+
+            fetch('/member/edit', {
+                method: 'PATCH',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.resultCode !== 'S-1') { // 수정 불가한 경우
+                        nicknameMessage.innerText = data.msg;
+                        nicknameMessage.classList.add('text-red-500');
+                        nicknameMessage.style.display = 'block';
+                    } else { // 수정 가능한 경우
+                        nicknameMessage.style.display = 'none';
+                        window.location.href = '/member/me';
+                    }
+                });
+
+            event.preventDefault();
+        }
+    </script>
 </head>
 <body>
 
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
-            <form th:action method="post" th:object="${loginRequestDto}" class="flex flex-col gap-6">
-                <div class="form-control">
-                    <label class="block mb-2">닉네임</label>
-                    <input type="text" name="nickname" class="border-b border-neutral px-2 py-2 w-full focus:outline-none"
+            <div class="form-control mb-2">
+                <label class="font-semibold">기존 닉네임</label>
+                <span th:text="${@rq.member.nickname}" type="text"
+                      class="border-neutral px-2 py-2 w-full"></span>
+            </div>
+
+            <form th:object="${editRequestDto}" onsubmit="submitForm()" class="flex flex-col gap-6">
+                <div class="form-control mb-2">
+                    <label class="font-semibold">새 닉네임</label>
+                    <input type="text" name="nickname" th:field="*{nickname}"
+                           class="border-b border-neutral px-2 py-2 w-full focus:outline-none"
                            placeholder="새 닉네임을 입력하세요">
+                    <span id="nicknameMessage" style="display: none;">수정불가메시지</span>
                 </div>
                 <div>
-                    <button type="submit" class="mt-4 bg-neutral text-white px-4 py-2 rounded-lg hover:bg-black">로그인</button>
+                    <button type="submit" class="mt-2 bg-neutral text-white px-4 py-2 rounded-lg hover:bg-black">수정완료
+                    </button>
                 </div>
             </form>
         </div>
