Fix: 이메일 전송 시 에러 발생 수정

--- a/api/src/main/resources/templates/payment/payment.html
+++ b/api/src/main/resources/templates/payment/payment.html
@@ -19,7 +19,7 @@
     button.addEventListener('click', function () {
         tossPayments.requestPayment('카드', {
             amount: 15000,
-            orderId: 'U5u4jHaQA_tBH5JMeuggeee',
+            orderId: 'U5u4jHaQA_tBH5JMeuggeeee',
             orderName: '토스 티셔츠 외 2건',
             customerName: '박토스',
             successUrl: 'http://localhost:8080/payment/success',
