--- a/api/src/main/resources/templates/payment/payment.html
+++ b/api/src/main/resources/templates/payment/payment.html
@@ -6,20 +6,20 @@
 <body>
 <section>
     <span>총 주문금액</span>
-    <span>15,000 원</span>
-    <button id="payment-button">15,000원 결제하기</button>
+    <span>11,900 원</span>
+    <button id="payment-button">11,900원 결제하기</button>
 </section>
 <script>
-
     var clientKey = 'test_ck_D4yKeq5bgrpgNXkdALXVGX0lzW6Y'
     var tossPayments = TossPayments(clientKey)
 
     var button = document.getElementById('payment-button') // 결제하기 버튼
 
     button.addEventListener('click', function () {
+        const randomValue = Date.now().toString(36).substring(2);
         tossPayments.requestPayment('카드', {
-            amount: 15000,
-            orderId: 'U5u4jHaQA_tBH5JMeuggeeee',
+            amount: 11900,
+            orderId: randomValue,
             orderName: '토스 티셔츠 외 2건',
             customerName: '박토스',
             successUrl: 'http://localhost:8080/payment/success',
